# streamlit-private

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 0-MISSION.md  1-EXPERIENCES.md  2-REQUIREMENTS.md  3-ARCHITECTURE.md  4-TESTING.md  README.md
docs/0-PRODUCT/: README.md  competitive-landscape.md  roadmap.md
docs/1-JOURNEYS/: README.md
docs/2-ENGINEERING/: README.md  release.md  skills.md  spike-findings.md
docs/2-ENGINEERING/ADRs/: 0001-gateway-based-architecture.md  0002-provider-capability-interfaces.md  0003-clerk-initial-auth-provider.md  0004-railway-initial-hosting-provider.md  0005-wrap-not-rewrite-init.md  0006-agent-skills-wrap-cli.md  0007-distribute-cli-via-pypi.md  0008-clerk-backend-verification-no-react.md  0009-access-requests-no-datastore.md  0010-websocket-session-revalidation.md  0011-single-container-network-isolation.md  0012-python-version-policy.md  README.md
skills/access-requests/: SKILL.md
skills/configure/: SKILL.md
skills/deploy/: SKILL.md
skills/init/: SKILL.md
skills/invite/: SKILL.md
skills/troubleshoot/: SKILL.md
src/streamlit_private/: __init__.py  cli.py  detection.py  manifest.py  scaffold.py  templates.py
src/streamlit_private/auth/: __init__.py  clerk.py  interface.py
src/streamlit_private/gateway/: __init__.py  __main__.py  auth_gateway.py  clerk_auth.py  proxy.py  request_access.py  streamlit_config.py  ws_revalidation.py
src/streamlit_private/hosting/: __init__.py  interface.py  railway.py
tests/: test_cli_smoke.py  test_preservation_guard.py
tests/auth/: _clerk_mock.py  fakes.py  test_auth_contract.py  test_clerk.py
tests/cli/: test_cli_args.py  test_deploy.py  test_detection.py  test_init.py  test_manifest.py
tests/gateway/: test_authorization.py  test_clerk_auth_spike.py  test_eviction_integration.py  test_gateway_main.py  test_heartbeat.py  test_proxy_spike.py  test_real_streamlit_spike.py  test_request_access.py  test_ws_revalidation.py
tests/providers/: _railway_mock.py  fakes.py  test_hosting_contract.py  test_railway.py  test_railway_e2e.py
tests/skills/: conftest.py  test_agent_agnostic.py  test_cli_parity.py  test_skill_guarantees.py  test_skill_manifests.py
tests/support/: __init__.py  clerk_tokens.py  fake_clock.py  preservation.py
tests/workflows/: test_access_requests.py  test_invitations.py
