[project]
name = "streamlit-private"
version = "0.1.0"
description = "Deploy private Streamlit apps behind managed auth and hosting — init and deploy in two commands."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "David Spencer" }]
keywords = ["streamlit", "authentication", "clerk", "railway", "deployment", "private", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DecisionNerd/streamlit-private"
Repository = "https://github.com/DecisionNerd/streamlit-private"
Issues = "https://github.com/DecisionNerd/streamlit-private/issues"

[project.scripts]
streamlit-private = "streamlit_private.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_private"]
