[project]
name = "streamlit-private"
version = "0.1.0"
description = "Deploy private Streamlit apps behind managed auth and hosting — init and deploy in two commands."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David Spencer" }]
keywords = ["streamlit", "authentication", "clerk", "railway", "deployment", "private", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DecisionNerd/streamlit-private"
Repository = "https://github.com/DecisionNerd/streamlit-private"
Issues = "https://github.com/DecisionNerd/streamlit-private/issues"

[project.scripts]
streamlit-private = "streamlit_private.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_private"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that exercise components together (may need a local Streamlit)",
    "e2e: end-to-end tests that require live provider sandboxes (Clerk/Railway)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
