[project]
name = "streamlit-private"
version = "0.1.0"
description = "Deploy private Streamlit apps behind managed auth and hosting — init and deploy in two commands."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "David Spencer" }]
keywords = ["streamlit", "authentication", "clerk", "railway", "deployment", "private", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
]
dependencies = []

[project.optional-dependencies]
# The gateway runs in the deployed container, not in the uvx-invoked CLI, so its
# runtime deps are an optional extra (ADR-0007 keeps the CLI lean). Installed via
# `pip install streamlit-private[gateway]` inside the generated image.
gateway = [
    "starlette>=0.40",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "websockets>=13",
    "clerk-backend-api>=5,<6",
]
# Admin workflows (invite, access-requests) call the Clerk Backend API locally.
# Kept out of the lean CLI (dependencies = []); installed via
# `pip install streamlit-private[admin]` or `uvx --with 'streamlit-private[admin]'`.
admin = [
    "clerk-backend-api>=5,<6",
]

[project.urls]
Homepage = "https://github.com/DecisionNerd/streamlit-private"
Repository = "https://github.com/DecisionNerd/streamlit-private"
Issues = "https://github.com/DecisionNerd/streamlit-private/issues"

[project.scripts]
streamlit-private = "streamlit_private.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    # Milestone 2 gateway spikes: the gateway extra plus token-signing tools so the
    # Clerk auth path is exercised with self-signed RS256 tokens (no live Clerk, no network).
    "streamlit-private[gateway]",
    "pytest-asyncio>=0.24",
    "pyjwt[crypto]>=2.9",
    # A real Streamlit, spun up as a subprocess, to prove the proxy works against
    # the genuine article (the linchpin spike), per docs/4-TESTING.md.
    "streamlit>=1.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_private"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that exercise components together (may need a local Streamlit)",
    "e2e: end-to-end tests that require live provider sandboxes (Clerk/Railway)",
    "spike: throwaway proofs-of-concept that de-risk a design before the real build",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
